modules/cli/src/test/resources/good/misc/globals/grecursion/Recursion01.scr
module good.misc.globals.grecursion.Recursion01;


global protocol Recursion1(role A, role B)
{
	//rec A { }  // Currently OK. Disallow?

	rec X
	{
		l1() from A to B;
		continue X;
		//continue Y;  // Uncomment bad, even if above line is commented
		//l2() from A to B;  // Uncomment bad
	}
}

