modules/cli/src/test/resources/bad/todo/Recursion14a.scr
module base.recursion.Recursion14a;


global protocol Recursion14a(role A, role B)
{
	rec X
	{
		l1() from A to B;
		do Y: base.recursion.Recursion14.Recursion14a(A, B);  // TODO
		do X: base.recursion.Recursion14.Recursion14a(A, B); // Uncomment OK if above line is commented  // TODO
		//do base.recursion.Recursion14.Recursion14a(A, B);  // Uncomment bad, even if above two lines are commented
	}
}

global protocol Recursion14a(role A, role B)
{
	rec X
	{
		l1() from A to B;
		continue X;
	}
}

